<resources>
    <string name="app_name">TestKotlin</string>
    <!-- Login requirements -->
    <string name="title_activity_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Sign In</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter a Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_level">Choose Level</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exist">Email Already Exist</string>
    <string name="error_email_password">Wrong Email or Password</string>
    <string name="text_not_member">No account yet? Create One</string>
    <string name="text_already_exist">Already a member? LogIn</string>
    <string name="error_password_match">Password Doesn\'t match</string>
    <string name="hint_whatsapp">Phone Number</string>
    <string name="welTutor">Welcome To Peer Tutoring</string>
    <string name="desTutor">Here you will be able to teach or learn from your fellow student/colleague.\nNote that your info will be shared if you wish to become a tutor.\nFor tutees, please be patient for you tutor.\n Communication will be via WhatsApp.</string>
    <string name="tutor">Become A Tutor</string>
    <string name="tutee">Request A Tutor</string>
    <string name="getTutor">Get Tutor</string>
    <string name="textAbout"><b>Created by HansBello Inc.</b> \n\n\nThis project was created to improve the performance of students in the university of Jos and Beyond. The University of Jos can be said to be the starting point to a greater commission to take place.\n Welcome to the <b>Tutorial Hub</b>.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_appsettings">Settings</string>
</resources>
