<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matthew.testkotlin.activities.contactTutor">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint" />

        <AutoCompleteTextView
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Level"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint" />

        <AutoCompleteTextView
            android:id="@+id/courseid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Course Code"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint" />

        <AutoCompleteTextView
            android:id="@+id/deptid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Department Code"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint" />

        <AutoCompleteTextView
            android:id="@+id/facultyid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Faculty Code"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_whatsapp"
            android:inputType="phone"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint" />

        <Button
            android:id="@+id/btnCAT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textColor="@color/colorText" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
